# csgopp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
csgod/: CMakeLists.txt
csgod/include/: common.h  generate.h  summary.h
csgopp/: CMakeLists.txt
csgopp-old/object/: CMakeLists.txt  code.h  layout.h  object.h
csgopp/cli/: CMakeLists.txt  advance.h  common.h  generate.h  info.h  main.cpp  summary.h
csgopp/csgopp/: CMakeLists.txt  client.cpp  client.h  demo.cpp  demo.h  error.h  game.cpp  game.h  network.cpp  network.h
csgopp/csgopp/client/: data_table.cpp  data_table.h  entity.cpp  entity.h  game_event.cpp  game_event.h  server_class.cpp  server_class.h  string_table.cpp  string_table.h  user.cpp  user.h
csgopp/csgopp/client/data_table/: data_property.cpp  data_property.h  data_table_property.cpp  data_table_property.h  data_type.cpp  data_type.h  property.cpp  property.h  value.cpp  value.h
csgopp/csgopp/common/: bits.h  code.cpp  code.h  control.cpp  control.h  database.h  hash.h  id.h  interface.h  layout.h  lookup.h  macro.h  magic.h  object.cpp  object.h  owned.h  reader.h  ring.h  vector.h
csgopp/csgopp/game/: player.h  send_table.cpp  send_table.h  server_class.cpp  server_class.h  team.h  user.cpp  user.h
csgopp/csgopp/model/: player.h  team.h  user.cpp  user.h
csgopp/csgopp/network/: data_table.cpp  data_table.h  declare.h  entity.h  send_table.cpp  send_table.h  server_class.cpp  server_class.h  string_table.cpp  string_table.h
csgopp/csgopp/network/data_table/: property.cpp  property.h  value.cpp  value.h
csgopp/csgopp/network/send_table/: property.cpp  property.h  value.h
csgopp/csgopy/: CMakeLists.txt  csgopy.cpp  csgopy.h  view.h
csgopp/csgopy/view/: entity_view.cpp  entity_view.h  object_view.cpp  object_view.h
csgopp/docs/: CMakeLists.txt  Doxyfile  README.md
csgopp/include/: error.h
csgopp/include/client/: data_table.h  entity.h  game_event.h
csgopp/include/client/data_table/: data_property.h  data_table_property.h  data_type.h  property.h
csgopp/include/common/: bits.h  control.h  id.h  macro.h  reader.h  vector.h
csgopp/include/csgopp/: client.h  demo.h
csgopp/include/csgopp/client/: data_table.h  entity.h  game_event.h
csgopp/include/csgopp/client/data_table/: data_property.h  data_table_property.h  data_type.h  property.h
csgopp/lib/: CMakeLists.txt  demo.cpp  demo.hpp
csgopp/lib/common/: lookup.h
csgopp/messages/: CMakeLists.txt  cstrike15_gcmessages.proto  cstrike15_usermessages.proto  engine_gcmessages.proto
csgopp/msg/: CMakeLists.txt  cstrike15_gcmessages.proto  cstrike15_usermessages.proto  engine_gcmessages.proto  netmessages.proto  steammessages.proto
csgopp/object/: code.cpp  code.h  layout.h  object.cpp  object.h
csgopp/source/: demo.cpp
csgopp/source/client/: server_class.cpp
csgopp/source/client/data_table/: data_table_property.cpp
csgopp/source/csgopp/: client.cpp  demo.cpp
csgopp/source/csgopp/client/: data_table.cpp  entity.cpp  game_event.cpp  server_class.cpp
csgopp/source/csgopp/client/data_table/: data_property.cpp  data_table_property.cpp  data_type.cpp
csgopp/source/csgopp/common/: control.cpp
csgopp/src/: main.cpp
csgopp/test/: CMakeLists.txt  demo_tests.cpp
csgopp/tests/: CMakeLists.txt  demo_tests.cpp
csgopp/tests/client/: data_table_tests.cpp
csgopp/tests/common/: bits_tests.cpp  hash_tests.cpp  id_tests.cpp  object_tests.cpp  reader_tests.cpp
csgopy/: CMakeLists.txt  csgopy.cpp
csgopy/include/csgopy/csgopp/: client.h  demo.h
csgopy/include/csgopy/csgopp/client/: data_table.h  entity.h  game_event.h  server_class.h  string_table.h  user.h
csgopy/include/csgopy/csgopp/common/: vector.h
csgopy/include/csgopy/objective/: object.h
csgopy/source/csgopy/: adapter.h  client.cpp  client.h  common.cpp  data_table.cpp  data_table.h  demo.cpp  demo.h  entity.cpp  entity.h  game_event.cpp  game_event.h  main.cpp  object.cpp  object.h  server_class.cpp  server_class.h  string_table.cpp  string_table.h  user.cpp  user.h
csgopy/source/csgopy/csgopp/client/: client.cpp  data_table.cpp  demo.cpp  entity.cpp  game_event.cpp  server_class.cpp  string_table.cpp  user.cpp
csgopy/source/csgopy/csgopp/common/: vector.cpp
csgopy/source/csgopy/objective/: object.cpp
demos/: eg-black-vs-kari-m1-mirage.dem  eg-black-vs-kari-m2-overpass.dem  eg-black-vs-kari-m3-nuke.dem
examples/: advance.py
object/: CMakeLists.txt
object/include/: object.h
object/include/object/: code.h  error.h  exception.h  handle.h  instance.h  lens.h  magic.h  object.h  reference.h  type.h  view.h
object/include/object/type/: array.h  object.h  value.h  wrapper.h
object/source/object/: code.cpp  instance.cpp  lens.cpp  type.cpp  view.cpp
object/source/object/type/: array.cpp  object.cpp  value.cpp
object/tests/: CMakeLists.txt  test_object.cpp
objective/: CMakeLists.txt
objective/include/: objective.h
objective/include/objective/: code.h  error.h  layout.h  magic.h  type.h  view.h
objective/include/objective/type/: array.h  object.h  value.h  wrapper.h
objective/source/object/: code.cpp  view.cpp
objective/source/object/type/: array.cpp  object.cpp  objective.cpp  value.cpp
objective/tests/: CMakeLists.txt  test_object.cpp
scripts/: parse_items_game.py
tests/csgopp/: CMakeLists.txt
tests/csgopp/common/: reader_tests.cpp  ring_tests.cpp
tests/object/: CMakeLists.txt  object_tests.cpp
